# inbq

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  todo.txt
.github/workflows/: build.yml  ci.yml  py-wheels-release.yml  release.yml  rs-release.yml
crates/inbq/: Cargo.toml
crates/inbq/benches/: bench_lineage.rs  bench_parsing.rs
crates/inbq/examples/: main.rs
crates/inbq/examples/lineage/: catalog.json
crates/inbq/src/: arena.rs  ast.rs  lib.rs  lineage.rs  main.rs  parser.rs  scanner.rs  test_utils.rs
crates/inbq/src/lineage/: catalog.rs  functions.rs  lineage.rs
crates/inbq/tests/: lineage_tests.toml  parsing_tests.toml  test_lineage.rs  test_parser.rs
crates/inbq_genpy/: Cargo.toml
crates/inbq_genpy/src/: generator.rs  main.rs
crates/py_inbq/: Cargo.toml  pyproject.toml
crates/py_inbq/examples/: parse.py
crates/py_inbq/python/inbq/: __init__.py  _inbq.pyi  ast_nodes.py  lineage.py
crates/py_inbq/python/tests/: test_parsing.py  test_pipeline.py
crates/py_inbq/src/: lib.rs
examples/: prova.rs
examples/lineage/: catalog.json  extract_lineage.py  query.sql  query2.sql
queries/: expr.sql  expr1.sql  q1.sql  todo1.sql
src/: arena.rs  lib.rs  lineage.rs  main.rs  parser.rs  scanner.rs
tests/: lineage_tests.toml  test_lineage.rs  test_parser.rs
