[package]
name = "inbq"
version = "0.1.0"
edition = "2024"
authors = ["Lorenzo Pratissoli <pratissolil@gmail.com>"]
exclude = ["/examples", "/tests"]
license = "MIT"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.36", features = ["derive"] }
env_logger = "0.11.8"
indexmap = {version = "2.9.0", features = ["serde"] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
toml = "0.8.20"
