[workspace]
resolver = "3"
members = ["crates/*"]

default-members = ["crates/inbq", "crates/inbq_genpy"]


[workspace.package]
documentation = "https://github.com/lpraat/inbq"
homepage = "https://github.com/lpraat/inbq"
repository = "https://github.com/lpraat/inbq"
readme = "README.md"
version = "0.2.1"
edition = "2024"
authors = ["Lorenzo Pratissoli <pratissolil@gmail.com>"]
license = "MIT"

[workspace.dependencies]
inbq = { version = "0.2.1", path = "crates/inbq" }
inbq_genpy = { version = "0.2.1", path = "crates/inbq_genpy"}

anyhow = "1.0.93"
clap = { version = "4.5.36" }
env_logger = "0.11.8"
indexmap = { version = "2.9.0" }
log = "0.4.27"
serde = { version = "1.0.219" }
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
toml = "0.8.20"
pyo3 = "0.26.0"
syn = "2.0.106"
rayon = "1.11.0"
