[package]
name = "py_inbq"
version = "0.15.0"
edition = "2024"

[lib]
name = "_inbq"
crate-type = ["cdylib"]

[dependencies]
inbq = { workspace = true }
pyo3 = { workspace = true, features = ["extension-module"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
rayon = { workspace = true }
