[package]
name = "py_inbq"
version = "0.17.1"
edition = "2024"

[lib]
name = "_inbq"
crate-type = ["cdylib"]

[dependencies]
inbq = { workspace = true }
pyo3 = { workspace = true, features = ["extension-module"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
rayon = { workspace = true }
